feat(core/client): tsconfig paths

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "*": ["types/*"]
+      "@typings/*": ["../types/*"]
     },
     "outDir": "./",
     "noImplicitAny": true,
