--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@typings/*": ["../types/*"]
+      "@typings/*": ["../types/*"],
+      "@lib/*": ["lib/*"]
     },
     "outDir": "./",
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "es2018",
     "allowJs": true,
-    "lib": ["es2017"],
-    "types": ["@citizenfx/client", "@types/node"],
+    "lib": ["es2018"],
+    "types": ["@citizenfx/client", "@types/node", "../types/rdr3_universal"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true
