--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "paths": {
-      "@typings/*": ["../types/*"]
+      "@typings/*": ["../types/*"],
+      "@lib/*": ["./lib/*"]
     },
     "outDir": "./",
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "es2018",
     "allowJs": false,
-    "lib": ["es2015", "DOM"],
+    "lib": ["es2018"],
     "types": ["@citizenfx/server", "@types/node"],
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
